[package]
name = "viacoin"
version = "0.17.1"
authors = ["Romano"]
license = "CC0-1.0"
homepage = "https://github.com/viacoin/rust-viacoin/"
repository = "https://github.com/viacoin/rust-viacoin/"
documentation = "https://docs.rs/viacoin/"
description = "General purpose library for using and interoperating with Viacoin and other cryptocurrencies."
keywords = [ "crypto", "viacoin", "bitcoin" ]
readme = "README.md"

[lib]
name = "bitcoin"
path = "src/lib.rs"

[features]
fuzztarget = ["secp256k1/fuzztarget", "bitcoin_hashes/fuzztarget"]
serde-decimal = ["use-serde", "strason"]
unstable = []
use-serde = ["serde", "bitcoin_hashes/serde"]

[dependencies]
bitcoin-bech32 = "0.9.0"
byteorder = "1.2"
rand = "0.3"
bitcoin_hashes = "0.3"
bitcoinconsensus = { version = "0.16", optional = true }

[dev-dependencies]
tempfile = "3"

[dependencies.serde]
version = "1"
optional = true

[dependencies.strason]
version = "0.4"
optional = true
default-features = false

[dependencies.hex]
version = "=0.3.2"

[dependencies.secp256k1]
version = "0.12"
features = [ "rand" ]
